k8s/grpc-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-deployment
spec:
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: quarkus-grpc-client
        image: raghukumarm/quarkus-grpc-client-jvm
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8081
