k8s/grpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
spec:
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - name: quarkus-grpc-server
        image: raghukumarm/quarkus-grpc-server-jvm
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 8080
        - containerPort: 9000
