k8s/grpc-client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: grpc-client
  ports:
  - port: 8081
    targetPort: 8081
