k8s/grpc-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
spec:
  type: ClusterIP
  selector:
    app: grpc-server
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  - port: 9000
    targetPort: 9000
    name: grpc
